--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@
   color: black; /* Cambia el color al pasar el ratón por encima */
   transition: color 0.3s ease-in-out; /* Transición suave para el cambio de color */
 }
-/* Estilos globales */
+/* Cursor personalizado */
 * {
   cursor: url('/assets/img/cursor.png'), auto; /* Cambia el cursor globalmente */
 }
