--- a/public/css/especiales.css
+++ b/public/css/especiales.css
@@ -26,16 +26,13 @@ ol li {
   border-radius: 10px;
 }
 /* Elemento activo */
-ol li.active {
+.active {
   color: green;
   border-color: green;
   transform: scale(1.1);
 }
 /* Pasar el mouse sobre un elemento no activo */
-ol li:hover {
-  color: blue;
-  transform: scale(1.05);
-}
+
 /*  */
 #especiales h4 {
   color: black;
@@ -77,44 +74,20 @@ ol li:hover {
 }
 /* Carrusel de cada personaje */
 /* Estilos para los botones de navegación del swiper */
-.button-next-evilryu, .button-prev-evilryu {
+.swiper-button-next-especiales, .swiper-button-prev-especiales {
   position: absolute;
   top: 50%;
-  background-color: darkslategrey; /* Fondo azul fuerte */
-  color: red;
+  background-color: black; /* Fondo azul fuerte */
+  color: #c1c6ca;
   padding: 10px;
   border-radius: 50%;
 }
-.button-next-evilryu {
+.swiper-button-next-especiales {
   right: 10px;
 }
 
-.button-prev-evilryu {
+.swiper-button-prev-especiales {
   left: 10px;
-}
-
-.swiper-button-next-violentken, .swiper-button-prev-violentken {
-  position: absolute;
-  top: 50%;
-  z-index: 10;
-  background-color: lightyellow;
-  color: sienna;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.swiper-button-next-chunlirosa, .swiper-button-prev-chunlirosa {
-  position: absolute;
-  top: 50%;
-  z-index: 10;
-  background-color: rgb(253, 70, 162);
-  color: gold;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 /* ************************************************************* RESPONSIVIDAD ************************************************************* */
 /* ------------------------------------------------------------------------------------------------------------------------ Pantallas grandes */
