--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,3 +22,28 @@
 * {
   cursor: url('/assets/img/cursor.png'), auto; /* Cambia el cursor globalmente */
 }
+
+/* *********************************************************** Botones navegación *********************************************************** */
+.swiper-button-next, .swiper-button-prev {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%; /* Para hacer que las flechas tengan un fondo circular */
+  background-color: #000000; /* Fondo azul fuerte */
+  transition: background-color 0.3s, color 0.3s; /* Suavizar el cambio de fondo y color */
+}
+/* ---------------------------------------------------------------------------------------------------------------------------------- Flechas */
+.swiper-button-next:after, .swiper-button-prev:after {
+  font-size: 20px; /* Ajustar tamaño de las flechas */
+  color: #c1c6ca; /* Color dorado */
+}
+/* --------------------------------------------------------------------------------------------------- Estado hover (cuando se pasa el ratón) */
+.swiper-button-next:hover, .swiper-button-prev:hover {
+  background-color: #c1caca; /* Fondo rosa */
+}
+/* --------------------------------------------------------------------------------------------------------- Color de las flechas se mantiene */
+.swiper-button-next:hover:after, .swiper-button-prev:hover:after {
+  color: black;
+}
