--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,30 @@
 * {
   cursor: url('/assets/img/cursor.png'), auto; /* Cambia el cursor globalmente */
 }
-
+/* ******************************************************** Contenedor de la galería ******************************************************** */
+.swiper-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 60px; 
+  overflow: hidden;
+}
+/* ******************************************************** Para mejorar visibilidad ******************************************************** */
+.swiper-slide {
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* *********************************** Para que las imágenes tengan un margen y no se peguen a los bordes *********************************** */
+.swiper-slide img {
+  width: 100%;
+  height: auto;
+  padding-left: 60px;
+  padding-right: 60px;
+  object-fit: contain; /* Para que las imágenes no se distorsionen */
+}
 /* *********************************************************** Botones navegación *********************************************************** */
 .swiper-button-next, .swiper-button-prev {
   width: 40px;
