mejoras generales en el funcionamiento

--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -1,7 +1,7 @@
 /* ********************************************************** Contenedor principal ********************************************************** */
 .inicio {
   background-color: #c1c6ca;
-  color: #000000; /* Texto blanco */
+  color: #000000; /* Texto */
   padding: 10px 10px;
 }
 /* ************************************************************* Sección título ************************************************************* */
@@ -264,9 +264,9 @@
   background-color: dodgerblue;
 }
 /* FEI LONG PLAYER 2 ------------------------------------------------------------------------------------------------------------------------ */
-.fila5V {
+/*.fila5V {
   background-color: dimgray;
-}
+}*/
 /* ****************************************************************************************************************************************** */
 .d-flex {
   display: flex;
