--- a/public/css/personajes.css
+++ b/public/css/personajes.css
@@ -26,11 +26,12 @@
 .character-img {
   max-width: auto; /* Asegura que la imagen no se expanda más allá del 100% del contenedor */
   width: auto; /* Asegura que la imagen tome el tamaño adecuado en contenedores pequeños */
-  max-height: 500px; /* Limita la altura máxima a 400px para evitar que las imágenes sean enormes */
+  max-height: 400px; /* Limita la altura máxima a 400px para evitar que las imágenes sean enormes */
 }
 /* *************************************************************** Paginación *************************************************************** */
 #customPagination {
-  column-count: 3; /* Divide la lista en 3 columnas */
+  display: block;
+  column-count: 2; /* Divide la lista en 3 columnas */
   column-gap: 10px; /* Espacio entre las columnas */
   overflow: hidden; /* Evita que la lista se desborde */  
 }
