--- a/public/css/personajes.css
+++ b/public/css/personajes.css
@@ -16,7 +16,7 @@
   font-size: 24px;
   color: #333;
 }
-
+/* ************************************************************* Imágenes */
 .character-images {
   display: flex;
   justify-content: center;
@@ -27,6 +27,13 @@
   max-width: auto; /* Asegura que la imagen no se expanda más allá del 100% del contenedor */
   width: auto; /* Asegura que la imagen tome el tamaño adecuado en contenedores pequeños */
   max-height: 400px; /* Limita la altura máxima a 400px para evitar que las imágenes sean enormes */
+}
+/* ************************************************************* Carrusel */
+.carousel {
+  display: none;
+}
+.carousel.active {
+  display: block;
 }
 /* *************************************************************** Paginación *************************************************************** */
 #customPagination {
@@ -41,9 +48,11 @@
   padding: 5px 0;
   list-style-type: none;
 }
-/* -------------------------------------------------------------------------------------------------------- Cambia el color al pasar el ratón */
-#customPagination li:hover {
-  color: #007bff; 
+/* Cambia el color para destacar el elemento seleccionado */
+#customPagination li.active {
+  font-weight: bold;
+  color: green;
+  cursor: default;
 }
 /* ************************************************************* RESPONSIVIDAD ************************************************************* */
 /* ------------------------------------------------------------------------------------------------------------------------ Pantallas grandes */
